--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,6 @@
-/.gitattributes export-ignore
-/.gitignore     export-ignore
-/.github        export-ignore
-/phpcs.xml      export-ignore
+/.gitattributes         export-ignore
+/.gitignore             export-ignore
+/.github                export-ignore
+/phpcs.xml              export-ignore
+/psalm.xml              export-ignore
+/psalm.baseline.xml     export-ignore
