--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "cracksalad/phpmailer-pgp",
-    "version": "1.2.0",
+    "version": "1.3.0",
     "type": "library",
     "description": "PHPMailerPGP enables PHPMailer to send OpenPGP/GPG encrypted and signed e-mails",
     "keywords": [
@@ -30,7 +30,8 @@
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.7.2",
         "dealerdirect/phpcodesniffer-composer-installer": "^1.0",
-        "phpcompatibility/php-compatibility": "^9.3.5"
+        "phpcompatibility/php-compatibility": "^9.3.5",
+        "vimeo/psalm": "^5.22"
     },
     "suggest": {
         "ext-gnupg": "is technically required, but not compatible with Windows"
@@ -46,6 +47,11 @@
         }
     },
     "scripts": {
-        "check": "./vendor/bin/phpcs"
+        "check": "./vendor/bin/phpcs",
+        "analyze": "./vendor/bin/psalm --no-diff --show-info=true",
+        "test": [
+            "@check",
+            "@analyze"
+        ]
     }
 }
