--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "cracksalad/phpmailer-pgp",
-    "version": "1.3.1",
+    "version": "2.0",
     "type": "library",
     "description": "PHPMailerPGP enables PHPMailer to send OpenPGP/GPG encrypted and signed e-mails",
     "keywords": [
@@ -38,7 +38,7 @@
     },
     "autoload": {
         "psr-4": {
-            "PHPMailer\\PHPMailer\\": "src/"
+            "PHPMailer\\PHPMailerPGP\\": "src/"
         }
     },
     "autoload-dev": {
