--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,8 @@
 /.gitattributes         export-ignore
 /.gitignore             export-ignore
 /.github                export-ignore
+/.phive                 export-ignore
 /phpcs.xml              export-ignore
+/phpunit.xml            export-ignore
 /psalm.xml              export-ignore
 /psalm.baseline.xml     export-ignore
