--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "cracksalad/phpmailer-pgp",
-    "version": "2.0",
+    "version": "2.0-rc1",
     "type": "library",
     "description": "PHPMailerPGP enables PHPMailer to send OpenPGP/GPG encrypted and signed e-mails",
     "keywords": [
